xserver-xorg-input-evdev (1:2.0.3-2) UNRELEASED; urgency=low

  * Build against xserver 1.5 rc6.
  * Run autoreconf at build time; build-depend on automake, libtool and
    xutils-dev.

 -- Julien Cristau <jcristau@debian.org>  Fri, 18 Jul 2008 22:23:45 +0200

xserver-xorg-input-evdev (1:2.0.3-1) unstable; urgency=low

  * New upstream release, incorporates the two fixes from our previous
    version.
  * Pull from evdev-2.0-branch:
    - Print the device name when we get a read error
    - Actually close the fd on DEVICE_CLOSE

 -- Julien Cristau <jcristau@debian.org>  Mon, 04 Aug 2008 13:05:52 +0200

xserver-xorg-input-evdev (1:2.0.2-1.lenny1) unstable; urgency=low

  * Pull two fixes from upstream
    - Fix EVIOCGBIT ioctl usage on big endian platforms
    - Fill up the version info

 -- Julien Cristau <jcristau@debian.org>  Wed, 30 Jul 2008 11:30:53 +0200

xserver-xorg-input-evdev (1:2.0.2-1) unstable; urgency=low

  * New upstream release
    + fixes mice with lots of buttons (Closes: #491061)

 -- Julien Cristau <jcristau@debian.org>  Fri, 18 Jul 2008 22:21:17 +0200

xserver-xorg-input-evdev (1:2.0.1-1) unstable; urgency=low

  [ Julien Cristau, Timo Aaltonen ]
  * New upstream release.

  [ Julien Cristau ]
  * Drop the XS- prefix from Vcs-* control fields.
  * Drop evdev_no_flush_on_init.diff, obsolete.
  * New patch include-the-proper-header-for-XkbSetRulesDflts-and-X.patch, fix
    a 'missing declaration' compiler warning by including the right header.
  * Run dpkg-shlibdeps with --warnings=6.  Drivers reference symbols from
    /usr/bin/Xorg and other modules, and that's not a bug, so we want
    dpkg-shlibdeps to shut up about symbols it can't find.  Build-depend on
    dpkg-dev >= 1.14.17.
  * Fix target dependencies in debian/rules.

 -- Julien Cristau <jcristau@debian.org>  Sun, 13 Jul 2008 15:37:13 +0200

xserver-xorg-input-evdev (1:1.2.0-1) unstable; urgency=low

  * New upstream releases