@@ -3,6 +3,7 @@ xserver-xorg-input-evdev (1:2.0.3-2) UNRELEASED; urgency=low
   * Build against xserver 1.5 rc6.
   * Run autoreconf at build time; build-depend on automake, libtool and
     xutils-dev.
+  * Add support for parallel builds.
 
  -- Julien Cristau <jcristau@debian.org>  Fri, 18 Jul 2008 22:23:45 +0200
 
